Fix SonarCloud quick wins (~30 issues)
- java:S6204: Replace Collectors.toList() with toList() where safe
  (CartService, OrderResolver - verified lists not modified after creation)
- java:S1612: Lambda to method reference in Cart.java
- java:S6201: Pattern matching instanceof in AuthResource.java
- java:S1125: Remove unnecessary boolean literals
  (CustomEventDisplay, CalendarService, TemplateService)
- java:S1710: Remove unnecessary @APIResponses wrapper in BootstrapResource
- java:S1130: Remove unnecessary throws declarations in OrderGraphQLTest
- java:S5785: Use assertEquals instead of assertTrue for equality checks
  (AuthenticationServiceTest, PDFRenderingServiceTest, AuthenticationIntegrationTest)
- java:S1481/S1854: Remove unused variables and useless assignments
  (HebrewCalendarService, HebrewCalendarConverter, EventService, test files)